2003-06-23 Mariusz Woloszyn
	* configure.in: after reading autoconf documentation (yes, some people
	  do really read documentation) i found that --disable-ptpcam is the
	  right way to disable building some package parts (rather than
	  --without-*), so I changed --without-ptpcam to --disable-ptpcam!
	* README: updated readme to mention --disable-ptpcam
2003-06-09 Mariusz Woloszyn
	* Makefile.am: added DISTCLEANFILES to distclean _stdint.h 
	  & libptp-endian.h; defined libptp2 includes dir and files
	* configure.in: reorganized library versioning system
2003-05-28 Mariusz Woloszyn
	* ptp.h: two more CANON properties (thanks to Jean-Nicolas Kuttler)
	* ptpcam.c: two more CANON properties (thanks to Jean-Nicolas Kuttler)
2003-05-26 Mariusz Woloszyn
	* ptp.h: added some CANON extension device property codes (thanks
	  goes to Jean-Nicolas Kuttler)
	* ptpcam.c: added support for CANON extension device property codes
	* README: fixed typos
2003-05-24 Mariusz Woloszyn
	* ptpcam.c: fixed bug causing not displaying unknown properties
2003-05-23 Mariusz Woloszyn
	* README: at last (but not least) the great README!!!
	* ptpcam.c: a couple of typos
2003-05-19 Mariusz Woloszyn
	* Makefile.am: reorganized configure to build without ptpcam
	* configure.in: allowed configure --without-ptpcam
	* TODO: new TODO for standalone 1.0 release
2003-05-19 Mariusz Woloszyn
	* Makefile.am: added library versioning (currrent varsion 1.0.0)
	* configure.in: added library versioning (currrent varsion 1.0.0)
	* ptpcam.c: changed displaying of property values
2003-05-15 Mariusz Woloszyn
	* .cvsignore: added _stdint.h to .cvsignore
	* README: reorganized for stand alone release (still lacks ptpcam
	  detailed description)
2003-05-14 Mariusz Woloszyn
	* started stand alone libptp2 1.0dev1; imported into libptp2 cvs;
	  prepared for stand alone distribution (autoconf/automake
	  implemented)
2003-05-14 Mariusz Woloszyn
	* ptpcam.c: changed test_ptp.c to ptpcam.c;